<resources>
    <string name="app_name">TaoSecret</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="getcode">Get Code</string>
    <string name="btn_login">Login</string>
    <string name="publish_message">Publish Message</string>
    <string name="phone_not_be_empty">phone can\'t be empty</string>
    <string name="code_not_be_empty">code can\'t be empty</string>
    <string name="phone_succ">get code success</string>
    <string name="phone_fail">get code failed</string>
    <string name="connecting">Connecting</string>
    <string name="connecting_to_server">Connecting to server,please wait</string>
    <string name="login_error">Fail to login,please try later!</string>
    <string name="load_message_success">Load message success.</string>
    <string name="fail_to_load_message">Fail to load message,please try later.</string>
    <string name="comment_cannot_be_empty">Comment can\'t be empty</string>
    <string name="comment_failed">Comment error</string>
    <string name="load_comment_success">Load comments success!</string>
    <string name="fail_to_load_comment">Fail to get comments,please try later!</string>
    <string name="content_cannot_be_empty">Content can\'t be empty</string>
    <string name="publish_message_success">Publish message success</string>
    <string name="publish_message_fail">Publish message failed,please try later</string>
    <string name="publish">Publish</string>
    <string name="code">Code</string>
    <string name="miss_token">token is expired,please login again</string>
    <string name="reply">Reply</string>
    <string name="comment_count">"Comments:"</string>
    <string name="comment_send">Send</string>
    <string name="loading">Loading...</string>
    <string name="no_more_message">No more message</string>
    <string name="click_again_to_exit">click again to exit</string>
    <string name="say_what_you_want">say what you want</string>
    <string name="my_contacts">MyContacts</string>
    <string name="last_login_at">last login at</string>
    <string name="mobile">mobile</string>
    <string name="refresh">refresh</string>
    <string name="quit">Quit</string>
    <string name="change_password">Change Password</string>
    <string name="read_me">Read me</string>
    <string name="quit_message">Are you sure to quit?\nOnce you leave,you need input the password again</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="code_not_same">both password are not the same</string>
    <string name="login_with_newcode">Change success!\nPlease login with newCode again</string>
    <string name="error_old_code">error old code</string>
    <string name="old_code">Old password</string>
    <string name="new_code">New password</string>
    <string name="confirm_code">Input again</string>
    <string name="et_old_code">old password</string>
    <string name="et_new_code">new password</string>
    <string name="et_confirm_code">confirm password</string>
    <string name="code_is_error">Code is error!</string>
    <string name="develop_info">develop by tao</string>
    <string name="app_introduction">Input your Phone number first time,and set the code.\nYour can chat with someone who is in your phone book!</string>
    <string name="mail_to_me">If you have any idea,mail to me</string>

</resources>
